Fix gap

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ h1 {
   height: var(--bruce-picture-height);
   border-radius: 8px 8px 0 0;
   position: absolute;
-  bottom: calc(100%);
+  bottom: calc(100% - 1px);
   left: 0;
   background-color: var(--bruce-name-color);
   transition: top 0.25s, height 0.25s, opacity 0.5s;
